--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "start:app-one": "ng serve --project=app-one --port=4000",
-    "start:app-two": "ng serve --project=app-two --port=4100"
+    "start:app-two": "ng serve --project=app-two --port=4100",
+    "build:app-one": "ng build --project app-one --base-href /one",
+    "build:app-two": "ng build --project app-two --base-href /two",
+    "docker-build:app-one": "docker build . -f projects/app-one/Dockerfile -t app-one",
+    "docker-build:app-two": "docker build . -f projects/app-two/Dockerfile -t app-two"
   },
   "private": true,
   "dependencies": {
