--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "build:app-one": "ng build --project app-one --base-href /one",
     "build:app-two": "ng build --project app-two --base-href /two",
     "docker-build:app-one": "docker build . -f projects/app-one/Dockerfile -t app-one",
-    "docker-build:app-two": "docker build . -f projects/app-two/Dockerfile -t app-two"
+    "docker-build:app-two": "docker build . -f projects/app-two/Dockerfile -t app-two",
+    "docker-tag:app-one": "docker image tag app-one:latest anthonykonschuh/app-one:latest",
+    "docker-tag:app-two": "docker image tag app-two:latest anthonykonschuh/app-two:latest",
+    "docker-push:app-one": "npm run docker-tag:app-one && docker image push anthonykonschuh/app-one:latest",
+    "docker-push:app-two": "npm run docker-tag:app-two && docker image push anthonykonschuh/app-two:latest",
+    "helm-upgrade:app-one": "helm upgrade --install app-one -f ./helm/values.yaml -f ./projects/app-one/values.yaml ./helm",
+    "helm-upgrade:app-two": "helm upgrade --install app-two -f ./helm/values.yaml -f ./projects/app-two/values.yaml ./helm"
   },
   "private": true,
   "dependencies": {
