More fixes for helm

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "polyfills": "projects/app-one/src/polyfills.ts",
             "tsConfig": "projects/app-one/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "baseHref": "/one/",
             "assets": [
               "projects/app-one/src/favicon.ico",
               "projects/app-one/src/assets"
@@ -129,6 +130,7 @@
             "polyfills": "projects/app-two/src/polyfills.ts",
             "tsConfig": "projects/app-two/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "baseHref": "/two/",
             "assets": [
               "projects/app-two/src/favicon.ico",
               "projects/app-two/src/assets"
