--- a/projects/app-one/Dockerfile
+++ b/projects/app-one/Dockerfile
@@ -16,5 +16,7 @@ RUN npm run build:app-one
 
 FROM nginx:latest as server
 
+RUN mkdir /etc/nginx/templates
 COPY projects/app-one/nginx.conf /etc/nginx/nginx.conf
+COPY projects/app-one/default.conf.template /etc/nginx/templates
 COPY --from=build /app/dist/app-one/. /usr/share/nginx/html
