--- a/projects/app-two/values.yaml
+++ b/projects/app-two/values.yaml
@@ -1,7 +1,7 @@
 image:
   registry: anthonykonschuh
   repository: anthonykonschuh/app-two
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
