Add dnd api integration locally

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:app-one": "ng serve --project=app-one --port=4000",
-    "start:app-two": "ng serve --project=app-two --port=4100",
+    "start:app-one": "ng serve --project=app-one --port=4000 --proxy-config proxy.local.json",
+    "start:app-two": "ng serve --project=app-two --port=4100 --proxy-config proxy.local.json",
     "build:app-one": "ng build --project app-one --base-href /one/",
     "build:app-two": "ng build --project app-two --base-href /two/",
     "docker-build:app-one": "docker build . -f projects/app-one/Dockerfile -t app-one",
