--- a/helm/app-two/values.yaml
+++ b/helm/app-two/values.yaml
@@ -1,8 +1,15 @@
-# Default values for helm.
+# Default values for app-two.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
+
+image:
+  registry: anthonykonschuh
+  repository: anthonykonschuh/app-two
+  pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -31,20 +38,20 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  selector:
-    app: angular-monorepo
   type: ClusterIP
   port: 80
-  targetPort: 80
-  name: 80-80
-  protocol: TCP
 
 ingress:
   enabled: true
-  # className: "nginx"
   annotations:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: monorepo.test
+      paths:
+        - path: /two
+          pathType: Prefix
+  tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
